Edit js to include two buttons which clear the grid and replace the grid with a new one of user-specified resolution respectively. Edit html and css to center the grid and buttons on the page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     </head>
 
     <body>
-        <div class="grid">
+        <div class="content">
+            <div class="buttons">
+                <button id="newGrid">New Grid</button>
+                <button id="clearGrid">Clear Grid</button>
+            </div>
+            <div class="grid">
+            </div>
         </div>
     </body>
 </html>
